--- a/css/styles.css
+++ b/css/styles.css
@@ -19,12 +19,14 @@
   --card-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12),
     0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
+  --cubic:cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 body {
   background-color: var(--primary-white-color);
   color: var(--primary-text-color);
   font-family: "Roboto", sans-serif;
+  /* padding-top: 80px; */
 }
 
 /* Utilities */
@@ -64,7 +66,15 @@ img {
 
 
 /* site nav */
-.header {
+/* Для фиксированой шапки .header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  background-color: var(--primary-white-color);
+} */
+
+.header-portfolio {
   border-bottom: 1px solid #ECECEC;
 }
 
@@ -88,14 +98,32 @@ img {
 
 .site-nav .link {
   display: block;
+  position: relative;
   padding-top: 32px;
   padding-bottom: 32px;
 
   color: var(--title-text-color);
+
+  transition: color 250ms var(--cubic);
 }
+
 
 .site-nav .link.current {
   color: var(--accent-color);
+}
+
+.site-nav .link.current::after {
+  display: inline-block;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  opacity: 1;
+  
+  content: "";
+  width: 100%;
+  height: 4px;
+  border-radius: 2px;
+  background-color: var(--accent-color);
 }
 
 .contact-nav,
@@ -120,15 +148,14 @@ img {
   align-items: center;
 
   color: var(--primary-text-color);
+
+  transition: color 250ms var(--cubic);
 }
 
-
-.contact-nav a:hover,
-.contact-nav a:focus,
-.site-nav a:hover,
-.site-nav a:focus,
-.footer .link:hover,
-.footer .link:focus,
+.contact-nav .link:hover,
+.contact-nav .link:focus,
+.site-nav .link:hover,
+.site-nav .link:focus,
 .link-contact:hover,
 .link-contact:focus {
   color: var(--accent-color);
@@ -285,6 +312,38 @@ img {
   justify-content: space-between;
 }
 
+.work-list p{
+padding: 0;
+margin-top: 0;
+margin-bottom: 0;
+margin-right: auto;
+margin-left: auto;
+
+font-weight: 700;
+font-size: 14px;
+line-height: 1.14;
+text-align: center;
+letter-spacing: 0.03em;
+text-transform: uppercase;
+color: var(--primary-white-color);
+}
+
+.work-thumb {
+  position: relative;
+}
+
+.work-action {
+  position: absolute;
+  bottom: 0;
+  display: flex;
+  align-items: center;
+  pointer-events: none;
+  
+  width: 100%;
+  height: 70px;
+  background: rgba(47, 48, 58, 0.8);
+}
+
 /* Team */
 
 .section-team {
@@ -313,7 +372,6 @@ img {
 
   box-shadow: var(--card-shadow);
   border-radius: 0px 0px 4px 4px;
-  overflow: hidden;
 
   background-color: var(--primary-white-color);
 }
@@ -363,6 +421,9 @@ img {
   justify-content: center;
   align-items: center;
   color: var(--icon-color);
+
+  transition: color 250ms var(--cubic),
+  background-color 250ms var(--cubic);
 }
 
 .social-link:hover,
@@ -389,12 +450,13 @@ img {
   line-height: 1.87;
   text-align: center;
   letter-spacing: 0.06em;
+
+  transition: background-color 250ms var(--cubic);
 }
 
 .button:hover,
 .button:focus {
   background-color: #188CE8;
-  color: var(--primary-white-color);
 }
 
 /* Clients */
@@ -422,6 +484,9 @@ img {
   justify-content: center;
   align-items: center;
   color: var(--icon-color);
+
+  transition: color 250ms var(--cubic),
+  border-color 250ms var(--cubic);
 }
 
 .clients-link:hover,
@@ -491,6 +556,8 @@ img {
   font-size: 14px;
   line-height: 1.71;
   letter-spacing: 0.03em;
+
+  transition: color 250ms var(--cubic);
 }
 
 .join {
@@ -538,9 +605,9 @@ img {
 .button-portfolio:focus {
   color: var(--primary-white-color);
   background-color: var(--accent-color);
-    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1),
-    0px 1px 2px rgba(0, 0, 0, 0.08),
-    0px 2px 2px rgba(0, 0, 0, 0.12);
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1),
+  0px 1px 2px rgba(0, 0, 0, 0.08),
+  0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
 .button-portfolio {
@@ -559,7 +626,11 @@ img {
   letter-spacing: 0.03em;
   border: none;
   border-radius: 4px;
-}
+  
+  transition: color 250ms var(--cubic),
+  box-shadow 250ms var(--cubic),
+  background-color 250ms var(--cubic);
+  }
 
 /* Portfolio List */
 
@@ -572,15 +643,26 @@ img {
 
 .card-link{
   display: block;
+
+  transition: box-shadow 250ms var(--cubic);
+}
+
+.portfolio-thumb {
+  position: relative;
+  overflow: hidden;
+}
+
+.card-link:hover .thumb-text,
+.card-link:focus .thumb-text {
+  transform: translateY(0);
 }
 
 .card-link:hover,
- .card-link:focus {
+.card-link:focus {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12),
     0px 4px 4px rgba(0, 0, 0, 0.06),
     1px 4px 6px rgba(0, 0, 0, 0.16);
 }
-
 .portfolio-item {
   flex-basis: calc(100% / 3 - var(--card-set-gap));
   margin-right: var(--card-set-gap);
@@ -615,4 +697,87 @@ img {
   margin-top: 0px;
   margin-bottom: 0px;
   color: var(--primary-text-color);
+}
+
+.thumb-text {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  transform: translateY(100%);
+  transform-origin: bottom center;
+  
+  width: 100%;
+  height: 100%;
+  padding: 63px 24px;
+  background: rgba(33, 150, 243, 0.9);
+
+  transition: transform 250ms var(--cubic);
+}
+
+.thumb-text>p {
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 1.56;
+  letter-spacing: 0.03em;
+  color: var(--primary-white-color);
+}
+
+/* Modal */
+.backdrop {
+  position: fixed;
+  top: 0;
+  right: 0;
+
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.2);
+
+  opacity: 1;
+  transition: opacity 250ms var(--cubic);
+}
+
+.backdrop.is-hidden {
+  opacity: 0;
+  pointer-events: none;
+  visibility: hidden;
+}
+
+.backdrop.is-hidden .modal {
+  transform: translate(-50%, -50%) scale(0.5);
+}
+
+.modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+
+  min-width: 528px;
+  min-height: 581px;
+  background-color: var(--primary-white-color);
+
+  transform: translate(-50%, -50%) scale(1);
+  transition: transform 250ms var(--cubic);
+}
+
+.button-close {
+  position: absolute;
+  top: 8px;
+  right: 8px;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  background-color: var(--primary-white-color);
+  cursor: pointer;
+}
+
+.icon-close {
+  width: 11px;
+  height: 11px;
 }
