--- a/css/styles.css
+++ b/css/styles.css
@@ -313,11 +313,8 @@ img {
 }
 
 .work-list p{
-padding: 0;
 margin-top: 0;
 margin-bottom: 0;
-margin-right: auto;
-margin-left: auto;
 
 font-weight: 700;
 font-size: 14px;
@@ -336,8 +333,8 @@ color: var(--primary-white-color);
   position: absolute;
   bottom: 0;
   display: flex;
+  justify-content: center;
   align-items: center;
-  pointer-events: none;
   
   width: 100%;
   height: 70px;
@@ -733,7 +730,7 @@ color: var(--primary-white-color);
   background: rgba(0, 0, 0, 0.2);
 
   opacity: 1;
-  transition: opacity 250ms var(--cubic);
+  transition: opacity 250ms var(--cubic), visibility 250ms var(--cubic);
 }
 
 .backdrop.is-hidden {
